# recommender_system

./: dockerfile  pyproject.toml
notebooks/: analysis_amazonkdd.ipynb  analysis_retailrocket.ipynb
src/helpers/: embed_fields.py
src/recommender_system/: train.py
src/recommender_system/datasets/: dataset.py
src/recommender_system/models/: constants.py  lightning.py  networks.py
