[project]
name = "recommender-system"
version = "0.1.0"
description = ""
authors = [
    {name = "Alex Linneman",email = "linneman23@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pandas (>=2.2.3,<3.0.0)", "numpy (>=2.2.3,<3.0.0)", "requests (>=2.32.3,<3.0.0)", "tqdm (>=4.67.1,<5.0.0)", "ipykernel (>=6.29.5,<7.0.0)", "pyarrow (>=19.0.1,<20.0.0)", "sentence-transformers (>=3.4.1,<4.0.0)", "torch (>=2.6.0,<3.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
